--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
 </head>
 <body>
-
+    <div class="fullscreen-bg">
+        <video loop="" muted="" autoplay="" class="fullscreen-bg__video">
+            <source src="../img/byhov.mp4" type="video/mp4">
+        </video>
+    </div>
+<div id="video-bg">
     <header>
     <div id="title">
         Іn<span>novation</span> 
@@ -47,7 +52,9 @@
 
     <nav id="footer"></nav>
 
-    <script src="libs/menu.js"></script>
+</div> 
+
+<script src="libs/menu.js"></script>
 
 </body>
 </html>
