--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="fullscreen-bg">
         <video loop="" muted="" autoplay="" class="fullscreen-bg__video">
-            <source src="../img/byhov.mp4" type="video/mp4">
+            <source src="img/byhov.mp4" type="video/mp4">
         </video>
     </div>
 <div id="video-bg">
