--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div class="fullscreen-bg">
         <video loop="" muted="" autoplay="" class="fullscreen-bg__video">
             <source src="img/byhov.mp4" type="video/mp4">
+            <source src="img/byhov.webm" type="video/webm">
+            <source src="img/byhov.ogv" type="video/ogg">         
         </video>
     </div>
 <div id="video-bg">
@@ -32,7 +34,7 @@
 
     <nav id="header">
     <h1>О нас</h1>
-    <a href="#"><img src="img/arrow7.svg" alt=""></a> 
+    <a href="pages/about.html"><img src="img/arrow7.svg" alt=""></a> 
     </nav>
 
     <main>
