--- a/index.html
+++ b/index.html
@@ -8,17 +8,25 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
    
-
 </head>
-<body>
-    <div class="fullscreen-bg">
-        <video loop="" muted="" autoplay="" class="fullscreen-bg__video">
-            <source src="img/byhov.mp4" type="video/mp4">
-            <source src="img/byhov.webm" type="video/webm">
-            <source src="img/byhov.ogv" type="video/ogg">         
-        </video>
-    </div>
-<div id="video-bg">
+<body id="bodyContainer" onload="res()" onresize="res()">
+
+    <!-- для IE -->
+    <script type="text/javascript">
+        if ((Object.hasOwnProperty.call(window, "ActiveXObject") && !window.ActiveXObject) || (navigator.appName == 'Microsoft Internet Explorer')) {
+        alert("Обновите браузер");
+        location.assign('https://www.microsoft.com/ru-ru/edge/');
+}          
+</script>
+
+    <div id="mainContainer">
+      <div id="video-bg">
+    <video loop="" muted="" autoplay="">
+        <source src="img/byhov.mp4" type="video/mp4">
+        <source src="img/byhov.webm" type="video/webm">
+        <source src="img/byhov.ogv" type="video/ogg">         
+    </video>
+</div>
     <header>
     <div id="title">
         Іn<span>novation</span> 
@@ -32,31 +40,41 @@
     </div>
 </header>
 
+<section id="sec1"> 
     <nav id="header">
     <h1>О нас</h1>
-    <a href="pages/about.html"><img src="img/arrow7.svg" alt=""></a> 
-    </nav>
 
-    <main>
-<p>Сайт разработан в рамках реализации инициативы «Быхов-инновационный», в рамках проекта «Поддержка экономического развития на местном уровне в Республике Беларусь», который финансируется Европейским союзом (ЕС) и реализуется Программой развития ООН (ПРООН) в партнерстве с Министерством экономики Республики Беларусь</p>
+    <a href="pages/about.html"><img src="img/arrow7.svg" alt=""></a> 
+</nav>
+
+    <p>Сайт разработан в рамках реализации инициативы «Быхов-инновационный», в рамках проекта «Поддержка экономического развития на местном уровне в Республике Беларусь», который финансируется Европейским союзом (ЕС) и реализуется Программой развития ООН (ПРООН) в партнерстве с Министерством экономики Республики Беларусь</p>
 <div id="social">
     <a href="#"><img src="img/s1.svg" alt=""></a>
     <a href="#"><img src="img/s2.svg" alt=""></a>
     <a href="#"><img src="img/s3.svg" alt=""></a>
     <a href="#"><img src="img/s4.svg" alt=""></a>
 </div>
+</section>
 
 <section id="mainMenu"></section>
 <section id="soonEvent"><h1>Ближайшие мероприятия</h1></section>
 <section id="eventMenu"></section>
 
-    </main>
+<nav id="footer"></nav> 
 
-    <nav id="footer"></nav>
+</div>     
+<script src="libs/menu.js"></script> 
 
-</div> 
+<script>
 
-<script src="libs/menu.js"></script>
-
+    function res() {
+     let w = document.documentElement.clientWidth;  
+     let h = document.documentElement.clientHeight;
+     bodyContainer.style.height = `${h-3}px`;
+     mainContainer.style.height =  `${h-3}px`;
+    // console.log(`w: ${w}, h: ${h}`)    
+}
+    
+    </script>
 </body>
 </html>
