--- a/pages/incubator.html
+++ b/pages/incubator.html
@@ -53,16 +53,16 @@
 <section class="sec1">
     <h2>Что вас интересует?</h2>
     <div id="tgs">
-        <span><a href="#">Коворкинг</a></span>
-        <span><a href="#">Консалтинг</a></span>
-        <span><a href="#">Стартап лаборатория</a></span>
-        <span><a href="#">Обучение</a></span>
+        <span><a href="#i1">Коворкинг</a></span>
+        <span><a href="#i2">Консалтинг</a></span>
+        <span><a href="#i3">Стартап лаборатория</a></span>
+        <span><a href="education.html">Обучение</a></span>
     </div> 
 </section>
 
 <section class="sec1"> 
     <div>
-    <h1>Стартап-лаборатория</h1>
+    <a name="i3"><h1>Стартап-лаборатория</h1></a>
     <div id="addr">
      <img src="../img/addr.svg" alt="">
      <span>Быхов, ул. Краснознаменная, 65</span>
@@ -86,7 +86,7 @@
 
 <section class="sec1"> 
     <div id="cons">
-    <h1>Консалтинг</h1>
+        <a name="i2"> <h1>Консалтинг</h1></a>
     <div id="addr1">
      <img src="../img/addr.svg" alt="">
      <span>Быхов, ул. Краснознаменная, 65</span>
@@ -133,7 +133,7 @@
 
 <section class="sec1"> 
     <div id="cons">
-    <h1>Коворкинг</h1>
+        <a name="i1"><h1>Коворкинг</h1></a>
     <div id="addr1">
      <img src="../img/addr.svg" alt="">
      <span>Быхов, ул. Краснознаменная, 65</span>
