--- a/pages/education.html
+++ b/pages/education.html
@@ -49,11 +49,11 @@
 <section class="sec1">
     <h2>Чему вы хотите учиться?</h2>
     <div id="tgs">
-        <span><a href="#">Управление&nbsp;и&nbsp;бизнес-анализ</a></span>
-        <span><a href="#">Мобильная&nbsp;разработка</a></span>
-        <span><a href="#">Разработка&nbsp;и&nbsp;тестирование&nbsp;ПО</a></span>
-        <span><a href="#">Маркетинг&nbsp;и&nbsp;продажи</a></span>
-        <span><a href="#">Информационная&nbsp;безопасность&nbsp;и&nbsp;администрирование</a></span>
+        <span><a href="#e1">Управление&nbsp;и&nbsp;бизнес-анализ</a></span>
+        <span><a href="#e2">Мобильная&nbsp;разработка</a></span>
+        <span><a href="#e3">Разработка&nbsp;и&nbsp;тестирование&nbsp;ПО</a></span>
+        <span><a href="#e4">Маркетинг&nbsp;и&nbsp;продажи</a></span>
+        <span><a href="#e5">Информационная&nbsp;безопасность&nbsp;и&nbsp;администрирование</a></span>
     </div> 
 </section>
 
@@ -66,19 +66,19 @@
 
 
 <section class="sec1">
-    <h2>Управление и бизнес анализ</h2>
+    <a name="e1"><h2>Управление и бизнес анализ</h2></a>
 </section>    
 
 <section id="car2" class="sec1 card"> </section>
 
 <section class="sec1">
-    <h2>Мобильная разработка </h2>
+    <a name="e2"><h2>Мобильная разработка </h2></a>
 </section>    
 
 <section id="car3" class="sec1 card"> </section>
 
 <section class="sec1">
-    <h2>Разработка и тестирование ПО </h2>
+    <a name="e3"><h2>Разработка и тестирование ПО </h2></a>
 </section>    
 
 <section id="car4" class="sec1 card"> </section>
@@ -87,15 +87,14 @@
 
 
 <section class="sec1">
-    <h2>Маркетинг и продажи
-    </h2>
+    <a name="e4"><h2>Маркетинг и продажи</h2></a>
 </section>    
 
 <section id="car6" class="sec1 card"> </section>
 
 
 <section class="sec1">
-    <h2>Защита информации и информационная безопасность </h2>
+    <a name="e5"> <h2>Защита информации и информационная безопасность </h2></a>
 </section>    
 
 <section id="car7" class="sec1 card"> </section>
