--- a/pages/projects.html
+++ b/pages/projects.html
@@ -49,8 +49,7 @@
 </section>
 
 <section class="sec1">
-        <h1>Каталог агроусадеб быховского района
-        </h1>
+      <a name="p1"> <h1>Каталог агроусадеб быховского района </h1></a>
 </section>
 
 <section class="sec1">
@@ -86,7 +85,7 @@
 
 
 <section class="sec1">
-    <h1>Порталл для ремесленников</h1>
+    <a name="p2"><h1>Порталл для ремесленников</h1></a>
 </section>
 <section class="sec1">
     <div class="proj">
@@ -115,7 +114,7 @@
 
 
 <section class="sec1">
-    <h1>Быхов туристический</h1>
+    <a name="p3"><h1>Быхов туристический</h1></a>
 </section>
 <section class="sec1">
     <div class="proj">
@@ -142,7 +141,7 @@
 
 
 <section class="sec1">
-    <h1>Быхов велосипедный</h1>
+    <a name="p4"><h1>Быхов велосипедный</h1></a>
 </section>
 <section class="sec1">
     <div class="proj">
