--- a/pages/a1.html
+++ b/pages/a1.html
@@ -6,7 +6,7 @@
     <title>О нас</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
-    <link rel="stylesheet" href="../css/pages.css">
+    <link rel="stylesheet" href="../css/a1.css">
 </head>
 <body>
     
@@ -25,7 +25,7 @@
 
 <main>
     <h1>О нас</h1>
-    <img id="vline1" src="../img/line1.svg" alt="">
+    <!-- <img id="vline1" src="../img/line1.svg" alt="">
 <section class="sec1">
     <div>
         <h2>Брифы проектов ПРООН в Беларуси</h2>
@@ -94,7 +94,7 @@
         <p>Быхов, ул. Краснознаменная, 65</p>
     </div>
 
-</section>
+</section> -->
 </main>
 <footer>
     <div>
