--- a/pages/web_app.html
+++ b/pages/web_app.html
@@ -45,8 +45,8 @@
             <div><img src="../img/page_web_app/almaz.png" alt=""> <p> Владимир Минский
                 преподаватель курса</p></div>
             <div><img src="../img/page_web_app/line11.svg" alt=""></div>
-            <div><p>Этот курс позволит всем желающим понять бессмысленность создания прекрасного в мире, где есть маркетологи, которые точно знают, как продать страхоту и заработать на этом много денег.
-                Присоединяйтесь к нам и мы увеличим бесполезное, наплевав на здравый смысл!</p></div>
+            <div><p>Кто такой web-разработчик? Специалист, создающий сайты и приложения для Web (например, системы интернет-банкинга, службы заказов билетов, и многое другое). Может отвечать как только за серверную или браузерную часть
+                сайта, так и за обе эти составляющих.</p></div>
         </div>
 
         <div class="cont1">
