--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <section id="sec1"> 
     <nav id="header">
-    <h1 class="z1">О нас</h1>
+    <h1 class="z1"><a style="text-decoration: none; color: #000" href="pages/about.html">О нас</a></h1>
 
     <a href="pages/about.html"><img class="a1" src="img/arrow7.svg" alt=""></a> 
 </nav>
