--- a/pages/events.html
+++ b/pages/events.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
     <link rel="stylesheet" href="../css/events.css">
+    <link rel="stylesheet" href="../css/forrms.css">
+    
 </head>
 
 <body id="bodyContainer" onload="startres()" onresize="res()">
@@ -86,8 +88,8 @@
         
     </div>
     <div class="events__button">
-        <a class="btn_left" href="news.html">Будущие мероприятия</a>
-        <a class="btn_right" href="news.html">Прошедшие мероприятия</a>
+        <a class="btn_left" style="color: #fff" href="future_events.html">Будущие мероприятия</a>
+        <a class="btn_right" href="last_events.html">Прошедшие мероприятия</a>
     </div>
 </section>
 
@@ -225,6 +227,23 @@ function scrl() {
 </script>
 
 
+<div id="mydiv0">
+    <div id="myform0" class="forrms">
+		<img onclick="mydiv0.style.display = 'none'" src="../img/esc.svg" alt="exit">
+		<h2>Напишите нам и мы свяжемся с вами</h2>
+        <form action="serv.php">
+            <input type="name" name="name" placeholder="Ваше имя" required>
+			<input type="email" name="eml" placeholder="Ваш e-mail" required>
+			<input type="tel" name="tel" placeholder="Ваш номер телефона" required>
+			<p>+375 xx xxx xx xx</p>
+			<textarea name="mess" placeholder="Текст комментария" required></textarea>
+            <input type="submit" value="Отправить">
+        </form>
+	</div>
+
+</div>  
+
+<script src="../libs/form.js"></script>
 
 </body>
 </html>
