--- a/pages/web_app.html
+++ b/pages/web_app.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../css/web_app.css">
 
     <link rel="stylesheet" href="../css/garm.css">
+    <link rel="stylesheet" href="../css/forrms.css">
+
 </head>
 
 <body id="bodyContainer" onload="startres()" onresize="res()">
@@ -58,7 +60,7 @@
         </div>
 
         <div class="cont2">
-            <div><a href="#"><img src="../img/page_web_app/zapis.svg" alt=""></a></div>
+            <div><img onclick="forma1()" style="cursor: pointer;" src="../img/page_web_app/zapis.svg" alt=""></div>
             <div><a href="#co">Программа курсов</a></div>
 
         </div>
@@ -260,6 +262,52 @@ function scrl() {
 </script>
 
 
+<div id="mydiv0">
+    <div id="myform0" class="forrms">
+		<img onclick="mydiv0.style.display = 'none'" src="../img/esc.svg" alt="exit">
+		<h2>Напишите нам и мы свяжемся с вами</h2>
+        <form action="serv.php">
+            <input type="name" name="name" placeholder="Ваше имя" required>
+			<input type="email" name="eml" placeholder="Ваш e-mail" required>
+			<input type="tel" name="tel" placeholder="Ваш номер телефона" required>
+			<p>+375 xx xxx xx xx</p>
+			<textarea name="mess" placeholder="Текст комментария" required></textarea>
+            <input type="submit" value="Отправить">
+        </form>
+	</div>
+
+</div>  
+
+
+<div id="mydiv1">
+<div id="myform1" class="forrms">
+    <img onclick="mydiv1.style.display = 'none'" src="../img/esc.svg" alt="exit">
+    <div class="forrms__tytle">
+        <h2>Мы рады, что вы решили записаться на курсы!</h2>
+    </div>
+    <div class="forrms__content">
+        <p>
+        Если Вы хотите проконсультироваться или уточнить детали обучения, свяжитесь с нашими специалистами по номеру +375 17 333 45 67
+        </p>
+    </div>
+    <form action="serv3.php">
+        <input placeholder="Выберите группу" list="grups" name="grups">
+              <datalist id="grups">
+                <option value="Интернет-маркетинг">
+                <option value="Бизнес-анализ">
+                <option value="Управление проектами">
+              </datalist>
+        <input type="name" name="name" placeholder="Ваше имя" required>
+        <input type="email" name="eml" placeholder="Ваш e-mail" required>
+        <input type="tel" name="tel" placeholder="Ваш номер телефона" required>
+        <p>+375 xx xxx xx xx</p>
+        <input type="submit" value="Отправить">
+    </form>
+</div>
+</div>
+
+
+<script src="../libs/form.js"></script>
 
 </body>
 </html>
