--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Іnnovation Bykhau</title>
+    <title>Innovative Bykhau</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
@@ -28,7 +28,7 @@
 </div>
     <header>
     <div id="title">
-        Іn<span>novation</span> 
+        Іn<span>novative</span> 
         By<span>khau</span>
     </div>
 
