--- a/pages/news.html
+++ b/pages/news.html
@@ -45,7 +45,7 @@
 
     <!-- 1 -->
     <section class="content content__link">
-        <a href="#">
+        <a href="news_on_img.html">
         <div class="content__img">
             <img src="../img/page_news/content_img-1.jpg" alt="">
         </div>
@@ -67,7 +67,7 @@
 
     <!-- 2 -->
     <section class="content content__link">
-        <a href="#">
+        <a href="news_no_img.html">
         <div class="content__img">
             <img src="../img/page_news/content_img-2.jpg" alt="">
         </div>
@@ -89,7 +89,7 @@
 
     <!-- 3 -->
     <section class="content content__link">
-        <a href="#">
+        <a href="news_on_img.html">
         <div class="content__img">
             <img src="../img/page_news/content_img-3.jpg" alt="">
         </div>
@@ -111,7 +111,7 @@
 
     <!-- 4 -->
     <section class="content content__link">
-        <a href="#">
+        <a href="news_no_img.html">
         <div class="content__img">
             <img src="../img/page_news/content_img-4.jpg" alt="">
         </div>
@@ -136,7 +136,7 @@
 
     <!-- 5 -->
     <section class="content content__link">
-        <a href="#">
+        <a href="news_on_img.html">
         <div class="content__img">
             <img src="../img/page_news/content_img-5.jpg" alt="">
         </div>
@@ -161,7 +161,7 @@
 
     <!-- 6 -->
     <section class="content content__link">
-        <a href="#">
+        <a href="news_no_img.html">
         <div class="content__img">
             <img src="../img/page_news/content_img-6.jpg" alt="">
         </div>
@@ -183,7 +183,7 @@
 
     <!-- 7 -->
     <section class="content content__link">
-        <a href="#">
+        <a href="news_on_img.html">
         <div class="content__img">
             <img src="../img/page_news/content_img-7.jpg" alt="">
         </div>
@@ -206,7 +206,7 @@
 
     <!-- 8 -->
     <section class="content content__link">
-        <a href="#">
+        <a href="news_no_img.html">
         <div class="content__img">
             <img src="../img/page_news/content_img-8.jpg" alt="">
         </div>
@@ -228,7 +228,7 @@
 
     <!-- 9 -->
     <section class="content content__link">
-        <a href="#">
+        <a href="news_on_img.html">
         <div class="content__img">
             <img src="../img/page_news/content_img-9.jpg" alt="">
         </div>
@@ -249,7 +249,7 @@
     </section>
 
     <section class="much_news">
-        <a href="#">
+        <a href="news_no_img.html">
             <div class="much_news__title">
                 <h2>Больше новостей! Еще больше!</h2>
             </div>
@@ -258,24 +258,6 @@
     </section>
 
 
-<!-- <section class="sec3">
-    <div id="f1">
-        <h2>Напишите нам и мы свяжемся с вами</h2>
-        <form action="#">
-            <input type="text" name="fname" placeholder="Ваше имя">
-            <input type="email" name="eml" placeholder="Ваш e-mail">
-            <textarea name="mess" placeholder="Текст комментария"></textarea>
-            <input type="submit" value="Отправить">
-        </form>
-    </div>
-    <div id="f2">
-        <img src="../img/house.svg" alt="">
-        <p>+ 375 39 34 45 43</p>
-        <p>info@inby.by</p>           
-        <p>Быхов, ул. Краснознаменная, 65</p>
-    </div>
-
-</section> -->
 </main>
 <footer id="foot0">
     <div id="foot1">
@@ -304,7 +286,7 @@
 
 function startres() {
     res();
-    setTimeout('document.body.style.opacity="1"', 500)
+    setTimeout('document.body.style.opacity="1"', 100)
 }
 
 function res() {
@@ -314,7 +296,7 @@ function res() {
      box = document.getElementsByClassName('box_menu');
      
      for (i=0; i<box.length; i++) {
-         let hi1, hi = h/6-70;
+         let hi1, hi = h/6-85;
 
         if (hi < 55) { hi1 = 50 }        
         else if (h > 1400) { hi1 = 263 }
