--- a/index.html
+++ b/index.html
@@ -68,13 +68,15 @@
 
 function startres() {
     res();
-    setTimeout('document.body.style.opacity="1"', 500)
+    setTimeout('document.body.style.opacity="1"', 100)
 }
 
     function res() {
      let w = document.documentElement.clientWidth;  
      let h = document.documentElement.clientHeight;
      
+        // alert(w); 860 1220
+        if (h>760) {
      if (h<1024) { 
      bodyContainer.style.height = `${h-3}px`;
      mainContainer.style.height =  `${h-3}px`;
@@ -85,7 +87,13 @@ function startres() {
 
      }
 
+    }
+        // if (w>1320) {
+
      if (w<1400) { 
+        bodyContainer.style.margin = '0 20px';
+        bodyContainer.style.width = '1220px';
+
         title.style.fontSize = '72px';
         l1.style.height = '140px';
         l2.style.height = '140px';
@@ -109,6 +117,10 @@ function startres() {
         date[i].style.marginTop = '-15px';  } 
 
      } else {
+
+        bodyContainer.style.margin = '0 auto';
+        bodyContainer.style.width = '100%';
+
         title.style.fontSize = '77px';
         l1.style.height = '150px';
         l2.style.height = '150px';
@@ -134,7 +146,7 @@ function startres() {
         
 
      }
-
+    // }
 
 
     // console.log(`w: ${w}, h: ${h}`)    
