--- a/pages/news_no_img.html
+++ b/pages/news_no_img.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Обучение</title>
+    <title>Новости буз картинки</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
-    <link rel="stylesheet" href="../css/education.css">
-    <link rel="stylesheet" href="../css/forrms.css">
+    <link rel="stylesheet" href="../css/news_no_img.css">
 </head>
 
 <body id="bodyContainer" onload="startres()" onresize="res()">
@@ -34,84 +33,54 @@
 </aside>
 
 <main id="mainCont">
-   
-<section class="sec1"> 
-    <div>
-    <h1>Курсы</h1>
-     <img id="vline1" src="../img/line1.svg" alt="">
-    </div>
-     <div>
-        <p>О, вы не видели наши курсы! Наши курсы - это самые лучшие, самые бесплатные курсы! На них мы обучаем всех, кто не может учиться, не хочет учиться, не знает буковок и циферок! А еще, мы дарим каждому студенту по котику, а ка  ждому котико по шоколадке. Спасибо нам огромное!</p>
-
-    </div>
-    
-</section>
-
-<section class="sec1">
-    <h2>Чему вы хотите учиться?</h2>
-    <div id="tgs">
-        <script src="../libs/edu_menu.js"></script>
-    </div> 
-</section>
-
-
-<section class="sec1">
-    <h2>Наши замечательные преподаватели</h2>
-</section>    
-
-<section id="car1" class="sec1 card"> </section>    
-
-<section class="sec1">
-    <a name="e1"><h2>Управление и бизнес анализ</h2></a>
-</section>    
-
-<section id="car2" class="sec1 card"> </section>
-
-<section id="car2_1" class="sec1 card"> </section>
-
-
-<section class="sec1">
-    <a name="e3"><h2>Разработка и тестирование ПО </h2></a>
-</section>    
-
-<section id="car4" class="sec1 card"> </section>
-
-<section id="car5" class="sec1 card"> </section>
-
-
-<section class="sec1">
-    <a name="e4"><h2>Курсы-интенсивы</h2></a>
-</section>    
-
-<section id="car6" class="sec1 card"> </section>
-
-
-<section class="sec1">
-    <a name="e6"> <h2>Маркетинг и продажи </h2></a>
-</section>    
-
-<section id="car8" class="sec1 card"> </section>
-
-
-
-<section class="sec3">
-    <div id="f1">
-        <h2>Напишите нам и мы свяжемся с вами</h2>
-        <form action="#">
-            <input type="text" name="fname" placeholder="Ваше имя">
-            <input type="email" name="eml" placeholder="Ваш e-mail">
-            <textarea name="mess" placeholder="Текст комментария"></textarea>
-            <input type="submit" value="Отправить">
-        </form>
-    </div>
-    <div id="f2">
-        <img src="../img/house.svg" alt="">
-        <p>+ 375 39 34 45 43</p>
-        <p>info@inby.by</p>           
-        <p>Быхов, ул. Краснознаменная, 65</p>
-    </div>
-
-</section>
+    <section class="news_no_img">
+        <div class="news_no_img__title">
+                <h1>Открыт новый курс “Основы разработки Web-приложений”</h1>
+            <img id="vline1" src="../img/line1.svg" alt="">
+        </div>
+            <div class="news_no_img__content">
+                <p>
+                    «Основы разработки Web-приложений» является базовым курсом для каждого, кто решил реализовать себя в IT. По итогам обучения будут получены навыки самостоятельного создания стандартных web-сайтов и управления их контентом. Также этот курс служит платформой для изучения современного front-end и любого из языков программирования.
+                </p>
+            </div>
+            <div class="news_no_img__tabl">
+                <table>
+                    <tr>
+                      <th>Старт занятий:</th>
+                      <td>8 марта</td>
+                    </tr>
+                    <tr>
+                      <th>График:</th>
+                      <td>среда, пятница (19:00 - 22:00)</td>
+                    </tr>
+                    <tr>
+                      <th>Количество занятий:</th>
+                      <td>18</td>
+                    </tr>
+                  </table>
+            </div>
+            <div class="news_no_img__address">
+                <img src="../img/addr.svg" alt="icon_address">
+                <p>Быхов, ул. Краснознаменная, 65</p>
+            </div>
+            <div class="news_no_img__list">
+                <h2>Вы научитесь</h2>
+                <ul>
+                    <li>Основами создания Web-страниц при помощи HTML и CSS.</li>
+                    <li>Как делать формы для ввода данных и таблицы на Web-страницах.</li>
+                    <li>Навыкам работы в востребованных приложениях Adobe Dreamweaver, Adobe Photoshop, Adobe Illustrator.</li>
+                    <li>Написанию сценарии на языке JavaScript.</li>
+                    <li>Управлению элементами Web-страницы, устанавливать и настраивать Web-сервер.</li>
+                </ul>
+            </div>
+            <div class="news_no_img__button">
+                <a href="web_app.html"><button class="button">Подробнее о курсе</button></a>
+            </div>
+        <a href="news.html">
+            <img src="../img/left-arrow10.svg" alt="row-left">
+            <span>назад к списку новостей</span>
+        </a>
+    </section>
 </main>
 <footer id="foot0">
     <div id="foot1">
@@ -135,8 +104,6 @@
 <div id="upward"><div id="arr"><a href="#top"><img src="../img/up_arrow.svg" alt=""></a></div></div>
 
 <script src="../libs/side_menu.js"></script>
-<script src="../libs/education.js"></script>
-
 
 <script>
 
@@ -177,8 +144,8 @@ function res() {
             foot0.style.marginLeft = '160px';
             foot1.style.width = '146px';
             foot2.style.marginLeft = '176px';
-            f1.style.width = '64%';
-            f2.style.width = '18%';
+            // f1.style.width = '64%';
+            // f2.style.width = '18%';
         
     }
 
@@ -209,23 +176,7 @@ function scrl() {
 }
 </script>
 
-<div id="mydiv0">
-    <div id="myform0" class="forrms">
-		<img onclick="mydiv0.style.display = 'none'" src="../img/esc.svg" alt="exit">
-		<h2>Напишите нам и мы свяжемся с вами</h2>
-        <form action="serv.php">
-            <input type="name" name="name" placeholder="Ваше имя" required>
-			<input type="email" name="eml" placeholder="Ваш e-mail" required>
-			<input type="tel" name="tel" placeholder="Ваш номер телефона" required>
-			<p>+375 xx xxx xx xx</p>
-			<textarea name="mess" placeholder="Текст комментария" required></textarea>
-            <input type="submit" value="Отправить">
-        </form>
-	</div>
 
-</div>  
-
-<script src="../libs/form.js"></script>
 
 </body>
 </html>
