--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <source src="img/byhov.ogv" type="video/ogg">         
     </video>
 </div>
-    <header>
+    <header style="margin-bottom: 20px;">
     <div id="title">
         Іn<span>novative</span> 
         By<span>khau</span>
@@ -39,7 +39,7 @@
     </div>
 </header>
 
-<section id="sec1"> 
+<section id="sec1" style="margin-bottom: 30px;"> 
     <nav id="header">
     <h1 class="z1"><a style="text-decoration: none; color: #000" href="pages/about.html">О нас</a></h1>
 
@@ -55,9 +55,9 @@
 </div>
 </section>
 
-<section id="mainMenu"></section>
-<section id="soonEvent"><h1 class="z1">Ближайшие мероприятия</h1></section>
-<section id="eventMenu"></section>
+<section id="mainMenu" style="margin-bottom: 30px;"></section>
+<section id="soonEvent" style="margin-bottom: 30px;"><h1 class="z1">Ближайшие мероприятия</h1></section>
+<section id="eventMenu" style="margin-bottom: 30px;"></section>
 
 <nav id="footer"></nav> 
 
@@ -68,13 +68,18 @@
 
 function startres() {
     res();
-    setTimeout('document.body.style.opacity="1"', 500)
+    setTimeout('document.body.style.opacity="1"', 100)
 }
 
     function res() {
      let w = document.documentElement.clientWidth;  
      let h = document.documentElement.clientHeight;
      
+      
+        if (h>720) {
+            bodyContainer.style.margin = '0 20px';
+        bodyContainer.style.width = '1220px';
+
      if (h<1024) { 
      bodyContainer.style.height = `${h-3}px`;
      mainContainer.style.height =  `${h-3}px`;
@@ -85,7 +90,12 @@ function startres() {
 
      }
 
+    }
+
      if (w<1400) { 
+        bodyContainer.style.margin = '0 20px';
+        bodyContainer.style.width = '1220px';
+
         title.style.fontSize = '72px';
         l1.style.height = '140px';
         l2.style.height = '140px';
@@ -109,6 +119,10 @@ function startres() {
         date[i].style.marginTop = '-15px';  } 
 
      } else {
+
+        bodyContainer.style.margin = '0 auto';
+        bodyContainer.style.width = '100%';
+
         title.style.fontSize = '77px';
         l1.style.height = '150px';
         l2.style.height = '150px';
