--- a/pages/news_no_img.html
+++ b/pages/news_no_img.html
@@ -134,8 +134,8 @@ function res() {
          foot0.style.marginLeft = '60px';
          foot1.style.width = '220px';
          foot2.style.marginLeft = '0';
-         f1.style.width = '54%';
-         f2.style.width = '23%';
+        // f1.style.width = '54%';
+        // f2.style.width = '23%';
         
     }
         else {
