--- a/pages/23-25_first_free_courses.html
+++ b/pages/23-25_first_free_courses.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Новости</title>
+    <title>23 и 25 апреля стартуют первые бесплатные курсы в рамках инициативы “Быхов-инновационный”.</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
-    <link rel="stylesheet" href="../css/education.css">
-    <link rel="stylesheet" href="../css/news.css">
+    <link rel="stylesheet" href="../css/news_on_img.css">
 </head>
 
 <body id="bodyContainer" onload="startres()" onresize="res()">
@@ -34,96 +33,39 @@
 </aside>
 
 <main id="mainCont">
-   
-    <section class="sec1"> 
-        <div>
-        <h1>Новости</h1>
-         <img id="vline1" src="../img/line1.svg" alt="">
+    <section class="news_on_img">
+        <div class="news_on_img__title">
+                <h1>23 и 25 апреля стартуют первые бесплатные курсы в рамках инициативы “Быхов-инновационный”.</h1>
+            <img id="vline1" src="../img/line1.svg" alt="">
         </div>
-        
-    </section>
-
-    <section class="content content__link">
-        <a href="23-25_first_free_courses.html">
-        <div class="content__img">
+        <div class="news_on_img__content">
             <img src="../img/23-25_news.jpg" alt="">
-        </div>
-        <div class="content__block">
-            <div class="content__data">
-                <span>12.04.2020</span>
-            </div>
-            <div class="content__title">
-                <h3>23 и 25 апреля стартуют первые бесплатные курсы в рамках инициативы “Быхов-инновационный”.</h3>
-            </div>
-            <div class="content__contents">
+            <div class="news_on_img__citat">
                 <p>
                     Несмотря на контролируемую ситуацию по распространению коронавируса в Беларуси, мы решили организовать первый бесплатный курс “Гид по IT-профессиям” в формате дистанционного обучения.
                 </p>
             </div>
+            <h2>На курсе Вы узнаете много нового о сфере IT, а также важный секрет - в айти есть не только программисты!</h2>
+            <p>
+                Занятия в 1-й группе будут проходить в четверг и пятницу (23,24 апреля) с 18:30 до 21:30. 2-й группе будут проходить в субботу и воскресенье (25,26 апреля) с 11:00 до 14:00.
+            </p>
+            <p>
+                Курс рассчитан на 2 занятия по 3 часа. <mark>ВНИМАНИЕ! Количество мест ограничено!</mark>
+            </p>
+            <p>
+                Когда вам хотелось бы пройти обучение? Ответьте, пожалуйста, в опроснике, мы обязательно учтем Ваши пожелания.
+            </p>
+            <p>
+                Инициатива «Быхов-инновационный» реализуется в рамках проекта «Поддержка экономического развития на местном уровне в Республике Беларусь», который финансируется Европейским союзом (ЕС) и реализуется Программой развития ООН (ПРООН) в партнерстве с Министерством экономики Республики Беларусь (Одобрен Постановлением Совета Министров Республики Беларусь от 21 января 2019 года за № 40 и зарегистрирован в базе данных проектов и программ международной технической помощи Министерства экономики Республики Беларусь,регистрационный номер 2/19/000968).
+            </p>
         </div>
-    </a>
+        <div class="button__back">
+            <a href="news.html">
+                <img src="../img/left-arrow10.svg" alt="row-left">
+                <span>назад к списку новостей</span>
+            </a>
+        </div>
     </section>
-
-    <!-- 2 -->
-    <section class="content content__link">
-        <a href="you_can_work_in_it.html">
-        <div class="content__img">
-            <img src="../img/page_news/content_img-3.jpg" alt="">
-        </div>
-        <div class="content__block">
-            <div class="content__data">
-                <span>16.04.2020</span>
-            </div>
-            <div class="content__title">
-                <h3>Ты можешь работать в IT</h3>
-            </div>
-            <div class="content__contents">
-                <p>
-                    Научим новым профессиям Бесплатно, в режиме online, 23 и 25 апреля
-Невероятно крутые преподаватели-практики.
-                </p>
-                <p>
-                    Количество мест ограничено!
-                </p>
-            </div>
-        </div>
-        </a>
-    </section>
-
-    <!-- 3 -->
-    <section class="content content__link">
-        <a href="news_business_incubator.html">
-        <div class="content__img">
-            <img src="../img/news_business_incubator.jpg" alt="">
-        </div>
-        <div class="content__block">
-            <div class="content__data">
-                <span>27.12.2019</span>
-            </div>
-            <div class="content__title">
-                <h3>В Быхове стартовала инициатива по созданию бизнес-инкубатора.</h3>
-            </div>
-            <div class="content__contents">
-                <p>
-                    Информационно-просветительское учреждение в сфере предпринимательства «Центр поддержки и развития частных бизнес-инициатив» стало победителем в конкурсе, который был объявлен в рамках проекта ЕС-ПРООН «Поддержка экономического развития на местном уровне в Республике Беларусь».
-                </p>
-            </div>
-        </div>
-        </a>
-    </section>
-
-
-
-    <section class="much_news">
-        <a href="news_no_img.html">
-            <div class="much_news__title">
-                <h2>Больше новостей! Еще больше!</h2>
-            </div>
-            <div class="much_news__row">&darr;</div>
-        </a> 
-    </section>
-
-
 </main>
 <footer id="foot0">
     <div id="foot1">
@@ -164,7 +106,7 @@ function res() {
      for (i=0; i<box.length; i++) {
          let hi1, hi = h/6-85;
 
-        if (hi < 55) { hi1 = 50 }        
+        if (hi < 55) { hi1 = 55 }        
         else if (h > 1400) { hi1 = 263 }
         else { hi1= hi }
 
@@ -177,8 +119,8 @@ function res() {
          foot0.style.marginLeft = '60px';
          foot1.style.width = '220px';
          foot2.style.marginLeft = '0';
-        //  f1.style.width = '54%';
-        //  f2.style.width = '23%';
+        // f1.style.width = '54%';
+        // f2.style.width = '23%';
         
     }
         else {
