--- a/pages/news_business_incubator.html
+++ b/pages/news_business_incubator.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Новости</title>
+    <title>В Быхове стартовала инициатива по созданию бизнес-инкубатора.</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
-    <link rel="stylesheet" href="../css/education.css">
-    <link rel="stylesheet" href="../css/news.css">
+    <link rel="stylesheet" href="../css/news_on_img.css">
 </head>
 
 <body id="bodyContainer" onload="startres()" onresize="res()">
@@ -34,96 +33,36 @@
 </aside>
 
 <main id="mainCont">
-   
-    <section class="sec1"> 
-        <div>
-        <h1>Новости</h1>
-         <img id="vline1" src="../img/line1.svg" alt="">
+    <section class="news_on_img">
+        <div class="news_on_img__title">
+                <h1>В Быхове стартовала инициатива по созданию бизнес-инкубатора.</h1>
+            <img id="vline1" src="../img/line1.svg" alt="">
         </div>
-        
-    </section>
-
-    <section class="content content__link">
-        <a href="23-25_first_free_courses.html">
-        <div class="content__img">
-            <img src="../img/23-25_news.jpg" alt="">
-        </div>
-        <div class="content__block">
-            <div class="content__data">
-                <span>12.04.2020</span>
-            </div>
-            <div class="content__title">
-                <h3>23 и 25 апреля стартуют первые бесплатные курсы в рамках инициативы “Быхов-инновационный”.</h3>
-            </div>
-            <div class="content__contents">
-                <p>
-                    Несмотря на контролируемую ситуацию по распространению коронавируса в Беларуси, мы решили организовать первый бесплатный курс “Гид по IT-профессиям” в формате дистанционного обучения.
-                </p>
-            </div>
-        </div>
-    </a>
-    </section>
-
-    <!-- 2 -->
-    <section class="content content__link">
-        <a href="you_can_work_in_it.html">
-        <div class="content__img">
-            <img src="../img/page_news/content_img-3.jpg" alt="">
-        </div>
-        <div class="content__block">
-            <div class="content__data">
-                <span>16.04.2020</span>
-            </div>
-            <div class="content__title">
-                <h3>Ты можешь работать в IT</h3>
-            </div>
-            <div class="content__contents">
-                <p>
-                    Научим новым профессиям Бесплатно, в режиме online, 23 и 25 апреля
-Невероятно крутые преподаватели-практики.
-                </p>
-                <p>
-                    Количество мест ограничено!
-                </p>
-            </div>
-        </div>
-        </a>
-    </section>
-
-    <!-- 3 -->
-    <section class="content content__link">
-        <a href="news_business_incubator.html">
-        <div class="content__img">
+        <div class="news_on_img__content">
             <img src="../img/news_business_incubator.jpg" alt="">
-        </div>
-        <div class="content__block">
-            <div class="content__data">
-                <span>27.12.2019</span>
-            </div>
-            <div class="content__title">
-                <h3>В Быхове стартовала инициатива по созданию бизнес-инкубатора.</h3>
-            </div>
-            <div class="content__contents">
+            <div class="news_on_img__citat">
                 <p>
                     Информационно-просветительское учреждение в сфере предпринимательства «Центр поддержки и развития частных бизнес-инициатив» стало победителем в конкурсе, который был объявлен в рамках проекта ЕС-ПРООН «Поддержка экономического развития на местном уровне в Республике Беларусь».
                 </p>
             </div>
+            <h2>«Быхов инновационный»</h2>
+            <p>
+                «Быхов инновационный» - название инициативы, идеей которой является создание структуры поддержки малого и среднего предпринимательства в Быхове – бизнес-инкубатора. Он станет площадкой для обучения населения района, в особенности молодежи, IT и интернет-технологиям для создания и продвижения бизнеса, стартапов и инновационных компаний, а также для поддержки, консультирования, сопровождения и помощи в поиске финансирования начинающих предпринимателям, повышения конкурентоспособности действующих МСП Быховского района.
+            </p>
+            <p>
+                Наши эксперты, имеющие многолетний опыт в сфере IT-образования, инновационные программы развития высокотехнологичного бизнеса и стартап-движения, проведут серию обучающих и информационных мероприятий для начинающих и действующих предпринимателей. Мы ждем активных жителей Быховского района, желающих обучаться, создавать и развивать свой бизнес!
+            </p>
+            <p>
+                А на фото - церемония награждения победителей конкурса, которая прошла в Минске. Сертификат победителя команде инициативы «Быхов инновационный» вручает Постоянный представитель ПРООН в Беларуси Александра Соловьёва.
+            </p>
         </div>
-        </a>
+        <div class="button__back">
+            <a href="news.html">
+                <img src="../img/left-arrow10.svg" alt="row-left">
+                <span>назад к списку новостей</span>
+            </a>
+        </div>
     </section>
-
-
-
-    <section class="much_news">
-        <a href="news_no_img.html">
-            <div class="much_news__title">
-                <h2>Больше новостей! Еще больше!</h2>
-            </div>
-            <div class="much_news__row">&darr;</div>
-        </a> 
-    </section>
-
-
 </main>
 <footer id="foot0">
     <div id="foot1">
@@ -164,7 +103,7 @@ function res() {
      for (i=0; i<box.length; i++) {
          let hi1, hi = h/6-85;
 
-        if (hi < 55) { hi1 = 50 }        
+        if (hi < 55) { hi1 = 55 }        
         else if (h > 1400) { hi1 = 263 }
         else { hi1= hi }
 
@@ -177,8 +116,8 @@ function res() {
          foot0.style.marginLeft = '60px';
          foot1.style.width = '220px';
          foot2.style.marginLeft = '0';
-        //  f1.style.width = '54%';
-        //  f2.style.width = '23%';
+         // f1.style.width = '54%';
+         // f2.style.width = '23%';
         
     }
         else {
