--- a/pages/front-end.html
+++ b/pages/front-end.html
@@ -21,7 +21,27 @@
         alert("Обновите браузер");
         location.assign('https://www.microsoft.com/ru-ru/edge/'); }          
     </script>
-    
+
+<div id="header_mobile">
+    <div id="logo_pages_small"><a href="../index.html"><span id="mc">Іn</span><span>By</span></a></div>
+    <nav id="burgerMenu"><img id="burg_icon" src="../img/burger_menu.svg" alt="">
+    </nav>
+</div>
+
+<div class="burg1">
+    <div>
+        <img src="../img/close.svg" alt="">
+    </div>
+    <div id="bMenu">
+    </div>
+    <div class="social msocial">
+        <a href="#"><img src="../img/s1.svg" alt=""></a>
+        <a href="#"><img src="../img/s2.svg" alt=""></a>
+        <a href="#"><img src="../img/s3.svg" alt=""></a>
+        <a href="#"><img src="../img/s4.svg" alt=""></a>
+    </div>
+</div>
+
 <aside id="side">
     <div id="side_cont">
     <div id="logo_pages"><a href="../index.html"><span id="mc">Іn</span><span>By</span></a></div>
@@ -180,7 +200,6 @@
 
 <div id="upward"><div id="arr"><a href="#top"><img src="../img/up_arrow.svg" alt=""></a></div></div>
 
-<script src="../libs/side_menu.js"></script>
 <script src="../libs/app.js"></script>
 
 <script src="../libs/front-end.js"></script>
@@ -189,6 +208,8 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
 <script  src="../libs/garm.js"></script>
+<script src="../libs/side_menu.js"></script>
+
 
 <!-- Для гармошки -->
 
