--- a/index.html
+++ b/index.html
@@ -26,13 +26,37 @@
         <source src="img/byhov.ogv" type="video/ogg">         
     </video>
 </div>
-    <header style="margin-bottom: 20px;">
+
+<nav id="burger_menu"><img id="burg_icon" src="img/burger_menu.svg" alt=""></nav>
+
+<div class="burg1">
+    <div>
+        <img src="img/close.svg" alt="">
+    </div>
+    <div id="bMenu">
+    </div>
+    <div class="social msocial">
+        <a href="#"><img src="img/s1.svg" alt=""></a>
+        <a href="#"><img src="img/s2.svg" alt=""></a>
+        <a href="#"><img src="img/s3.svg" alt=""></a>
+        <a href="#"><img src="img/s4.svg" alt=""></a>
+    </div>
+</div>
+
+<header style="margin-bottom: 20px;">
+
+    <div id="logo_ipad">
+        <img id="l1" src="img/logo1.svg" alt="">
+        <img id="l2" src="img/logo2.svg" alt="">
+        <img id="l3" src="img/logo3.svg" alt="">
+    </div>
+
     <div id="title">
         Іn<span>novative</span> 
         By<span>khau</span>
     </div>
 
-    <div id="logo">
+<div id="logo">
 <img id="l1" src="img/logo1.svg" alt="">
 <img id="l2" src="img/logo2.svg" alt="">
 <img id="l3" src="img/logo3.svg" alt="">
@@ -61,7 +85,9 @@
 
 <nav id="footer"></nav> 
 
-</div>     
+</div> 
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="libs/menu.js"></script> 
 
 <script>
@@ -93,7 +119,12 @@ function startres() {
     // }
 
      if (w<1400) { 
-       social.style.marginTop = '13px';
+       social.style.marginTop = '5px';
+       eventMenu.style.marginBottom = '0px';
+
+    he = document.getElementsByTagName('header');
+     for (i=0; i<he.length; i++) {
+    he[i].style.marginBottom = '0px';  }
 
      z1 = document.getElementsByClassName('z1');
      for (i=0; i<z1.length; i++) {
@@ -103,9 +134,9 @@ function startres() {
      for (i=0; i<m.length; i++) {
         m[i].style.height = '100px';  }   
 
-     e = document.getElementsByClassName('e');
-     for (i=0; i<e.length; i++) {
-        e[i].style.height = '127px';  } 
+    //  e = document.getElementsByClassName('e');
+    //  for (i=0; i<e.length; i++) {
+    //     e[i].style.height = '127px';  } 
      
      date = document.getElementsByClassName('date');
      for (i=0; i<date.length; i++) {
@@ -114,6 +145,10 @@ function startres() {
      } else {
 
        social.style.marginTop = '23px';
+
+       he = document.getElementsByTagName('header');
+       for (i=0; i<he.length; i++) {
+       he[i].style.marginBottom = '20px';  }
 
         z1 = document.getElementsByClassName('z1');
         for (i=0; i<z1.length; i++) {
