--- a/pages/23-25_first_free_courses.html
+++ b/pages/23-25_first_free_courses.html
@@ -19,6 +19,12 @@
         location.assign('https://www.microsoft.com/ru-ru/edge/'); }          
     </script>
     
+<div id="header_mobile">
+    <div id="logo_pages_small"><a href="../index.html"><span id="mc">Іn</span><span>By</span></a></div>
+    <nav id="burgerMenu"><img id="burg_icon" src="../img/burger_menu.svg" alt="">
+    </nav>
+</div>
+
 <aside id="side">
     <div id="side_cont">
     <div id="logo_pages"><a href="../index.html"><span id="mc">Іn</span><span>By</span></a></div>
@@ -85,9 +91,23 @@
     </div>
 </footer>
 
+<div class="burg1">
+    <div>
+        <img src="../img/close.svg" alt="">
+    </div>
+    <div id="bMenu">
+    </div>
+    <div class="social msocial">
+        <a href="#"><img src="../img/s1.svg" alt=""></a>
+        <a href="#"><img src="../img/s2.svg" alt=""></a>
+        <a href="#"><img src="../img/s3.svg" alt=""></a>
+        <a href="#"><img src="../img/s4.svg" alt=""></a>
+    </div>
+</div>
 
 <div id="upward"><div id="arr"><a href="#top"><img src="../img/up_arrow.svg" alt=""></a></div></div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="../libs/side_menu.js"></script>
 
 <script>
