--- a/pages/web_app.html
+++ b/pages/web_app.html
@@ -22,7 +22,28 @@
         alert("Обновите браузер");
         location.assign('https://www.microsoft.com/ru-ru/edge/'); }          
     </script>
-    
+
+<div id="header_mobile">
+    <div id="logo_pages_small"><a href="../index.html"><span id="mc">Іn</span><span>By</span></a></div>
+    <nav id="burgerMenu"><img id="burg_icon" src="../img/burger_menu.svg" alt="">
+    </nav>
+</div>
+
+
+<div class="burg1">
+    <div>
+        <img src="../img/close.svg" alt="">
+    </div>
+    <div id="bMenu">
+    </div>
+    <div class="social msocial">
+        <a href="#"><img src="../img/s1.svg" alt=""></a>
+        <a href="#"><img src="../img/s2.svg" alt=""></a>
+        <a href="#"><img src="../img/s3.svg" alt=""></a>
+        <a href="#"><img src="../img/s4.svg" alt=""></a>
+    </div>
+</div>
+
 <aside id="side">
     <div id="side_cont">
     <div id="logo_pages"><a href="../index.html"><span id="mc">Іn</span><span>By</span></a></div>
@@ -128,11 +149,9 @@
         <h2>Наши партнеры</h2>
     </div>
     <div id="part">
-        <div><img src="../img/lg1.svg" alt=""></div>
         <div><img src="../img/lg2.svg" alt=""></div>
         <div><img src="../img/lg3.svg" alt=""></div>
         <div><img src="../img/lg4.svg" alt=""></div>
-        <div><img src="../img/lg5.svg" alt=""></div>
     </div>
     
 </section>
@@ -178,7 +197,6 @@
 
 <div id="upward"><div id="arr"><a href="#top"><img src="../img/up_arrow.svg" alt=""></a></div></div>
 
-<script src="../libs/side_menu.js"></script>
 <script src="../libs/app.js"></script>
 
 <script src="../libs/web_app.js"></script>
@@ -189,6 +207,8 @@
 <script  src="../libs/garm.js"></script>
 
 <!-- Для гармошки -->
+
+<script src="../libs/side_menu.js"></script>
 
 <script>
 
