--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@ function startres() {
         for (i=0; i<m.length; i++) {
         m[i].style.height = '110px';  }  
         
-        e = document.getElementsByClassName('e');
-        for (i=0; i<e.length; i++) {
-        e[i].style.height = '147px';  }    
+        // e = document.getElementsByClassName('e');
+        // for (i=0; i<e.length; i++) {
+        // e[i].style.height = '147px';  }    
 
         date = document.getElementsByClassName('date');
         for (i=0; i<date.length; i++) {
