--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     <a href="pages/about.html"><img class="a1" src="img/arrow7.svg" alt=""></a> 
 </nav>
 
-    <p>Сайт разработан в рамках реализации инициативы «Быхов-инновационный», в рамках проекта «Поддержка экономического развития на местном уровне в Республике Беларусь», который финансируется Европейским союзом (ЕС) и реализуется Программой развития ООН (ПРООН) в партнерстве с Министерством экономики Республики Беларусь. Изложенная информация не отражает официальную позицию Европейского союза, ПРООН и Министерства экономики Республики Беларусь.</p>
+    <p>Сайт разработан в рамках реализации инициативы «Быхов-инновационный», в рамках проекта «Поддержка экономического развития на местном уровне в Республике Беларусь», который финансируется Европейским союзом (ЕС) и реализуется Программой развития ООН (ПРООН) в партнерстве с Министерством экономики Республики Беларусь. Изложенная информация не отражает официальную позицию Европейского союза, ПРООН и Министерства экономики Республики Беларусь.
+    </p>
 <div id="social">
     <a href="#"><img src="img/s1.svg" alt=""></a>
     <a href="#"><img src="img/s2.svg" alt=""></a>
