--- a/pages/about — копия.html
+++ b/pages/about — копия.html
@@ -61,11 +61,14 @@
      <img id="vline1" src="../img/line1.svg" alt="">
     </div>
      <div>
-        <h2>Быхов инновационный</h2>
-        <p>- бесплатная площадка для обучения информационным технологиям, поддержки, консультирования начинающих и действующих предпринимателей.</p>
-        <p>Наши эксперты помогут получить востребованную IT-профессию, а также расскажут, как создать и продвигать свой бизнес.
-</p>
-        <p>Инициатива «Быхов-инновационный» реализуется в рамках проекта «Поддержка экономического развития на местном уровне в Республике Беларусь», который финансируется Европейским союзом (ЕС) и реализуется Программой развития ООН (ПРООН) в партнерстве с Министерством экономики Республики Беларусь.</p>
+        <h2>Брифы проектов ПРООН в Беларуси</h2>
+        <p>В настоящее время Программа развития ООН в Беларуси реализует 19 проектов развития по трем приоритетным направлениям работы агенства в стране:</p>
+        <ul>
+            <li>1) Окружающая среда и энергоэффективность (9 проектов)</li>
+            <li>2) Демократическое управление и Цели устойчивого развития (4 проекта)</li>
+            <li>3) Социально-экономическое развитие (6 проектов)</li>
+        </ul>
+        <p>Общий бюджет всех идущих проектов: более 42 миллионов долларов США.</p>
     
     </div>
     <div class="pic">
@@ -75,8 +78,21 @@
 
 <section class="sec1">
     <div>
-        <h2>Цель инициативы «Быхов инновационный»:</h2>
-        <p class="b">создать благоприятные условия для развития Быховского района путем поддержки экономической инициативы населения, способствовать развитию бизнеса, стартапов и инновационных компаний.</p>
+        <h2>Чего мы хотим достичь</h2>
+        <p class="b">Деятельность ПРООН в Беларуси в настоящее время регулируется Страновым программным документом (ДСП) на 2016-2020 годы. Основное внимание в документе уделяется трем основным областям в соответствии с национальными приоритетами в области развития:</p>
+        <ul>
+            <li>1) Укрепление системы инклюзивного и гибкого управления.</li>
+            <li>2) Развитие зеленой экономики, включая производства, направленные на трудоустройство и обеспечение достойной жизни для уязвимых групп населения.</li>
+            <li>3) Улучшение доступа к базовым услугам для уязвимых групп.</li>
+        </ul>
+        <p>Ключевые результаты деятельности <a href="#">ПРООН в Беларуси в 2018 году (обзор)</a>.</p>
+    
+    </div>
+    <div class="pic">
+    <img id="pic2" src="../img/pole.jpg" alt="">
+    <p>В 2015 году Беларусь взяла на себя обязательства по достижению Целей устойчивого развития (ЦУР). ПРООН помогает стране внедрять   и актуализировать ЦУР на национальном и местном уровнях,      в частности путем поддержки Национального координатора ЦУР     и сближения местных мероприятий   с достижением глобальных целей.
+    </p>
+
     </div>
 </section>
 
