--- a/pages/you_can_work_in_it.html
+++ b/pages/you_can_work_in_it.html
@@ -85,7 +85,7 @@
             <p>
                 Не понимаете вообще что происходит в мире IT? Вы поймете основы и решите для себя хочется ли дальше заниматься в этом направлении. 
             </p>
-            <p><span class="hover" onclick="forma1()" style="cursor: pointer; font-weight: bold">ЗАПИСАТЬСЯ НА КУРСЫ</span></p>
+            <p><span class="hover" onclick="forma1()" style="cursor: pointer; font-weight: bold;">ЗАПИСАТЬСЯ НА КУРСЫ</span></p>
         </div>
         <div class="button__back">
             <a href="news.html">
