--- a/pages/Internet_marketing.html
+++ b/pages/Internet_marketing.html
@@ -138,8 +138,8 @@
 
 <section class="sec1">
     <div class="arr_cur">
-<a href="#"><img src="../img/arr_left.svg" alt=""></a>
-<a href="#"><img src="../img/arr_right.svg" alt=""></a>
+<a href="#!"><img src="../img/arr_left.svg" alt=""></a>
+<a href="#!"><img src="../img/arr_right.svg" alt=""></a>
     </div>
   </section>   
 
